Add documentation to the Client source files. Fix for Discord integration.

--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -1,15 +1,6 @@
-.logo {
-  width: 64px;
-  height: 64px;
-}
+.logo {width: 64px; height: 64px;}
 
 @media screen and (max-width: 480px) {
-  .logo {
-    width: 32px;
-    height: 32px;
-  }
-  
-  #board {
-    position: absolute;
-  }
+  .logo {width: 32px; height: 32px;}
+  #board {position: absolute;}
 }
